--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -12,36 +12,14 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      # - uses: actions/checkout@v3
-      # - name: Setup .NET SDK
-      #   uses: actions/setup-dotnet@v3
-      #   with:
-      #     dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
-      # - name: Restore
-      #   run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
-      # - name: Dotnet Build
-      #   run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-      # - name: Test
-      #   run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
-
-      # - name: Check Working Directory Contents
-      #   run: |
-      #     dir
-      #     pwd
-
-      # - uses: actions/checkout@v3
-      # - uses: actions/setup-node@v2
-
       - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: action/setup-node@v2
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v3
         with:
-          node-version: 20.x
-          cache: npm
-          cache-dependency-path: "devblog/devblog/clientApp"
-
-      - name: Install and Build Client App
-        run: |
-          npm install
-          npm run build
+          dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+      - name: Restore
+        run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+      - name: Dotnet Build
+        run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+      - name: Test
+        run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
