--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -7,11 +7,23 @@ env:
   AZURE_WEBAPP_NAME: TheDevBlog
   AZURE_WEBAPP_PACKAGE_PATH: devblog\published
   CONFIGURATION: Release
+  DOTNET_CORE_VERSION: 7.0.x
   WORKING_DIRECTORY: devblog
 jobs:
   build:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v3
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+      - name: Restore
+        run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
+      - name: Build
+        run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+      - name: Test
+        run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
       - name: Publish
         run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
       - name: Publish Artifacts
