--- a/devblog/devblog/ClientApp/package.json
+++ b/devblog/devblog/ClientApp/package.json
@@ -24,6 +24,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
     "reactstrap": "^9.1.3",
@@ -48,6 +49,7 @@
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-router-hash-link": "^2.4.9",
     "ajv": "^8.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
