--- a/devblog/devblog/client/Cargo.toml
+++ b/devblog/devblog/client/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = { version = "0.4.33", features = ["serde"] }
 gloo = "0.11.0"
 gloo-net = "0.5.0"
 reqwasm = "0.5.0"
