--- a/devblog/devblog/client/Cargo.toml
+++ b/devblog/devblog/client/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.33", features = ["serde"] }
+cookie = "0.18.0"
 gloo = "0.11.0"
 gloo-net = "0.5.0"
 reqwasm = "0.5.0"
@@ -16,9 +17,9 @@ serde_json = "1.0.113"
 stylist = { version = "0.13.0", features = ["yew", "parser"] }
 wasm-bindgen = "0.2.90"
 wasm-bindgen-futures = "0.4.40"
+wasm-cookies = "0.2.1"
 web-sys = { version = "0.3.67", features = ["HtmlInputElement"] }
 yew = { version = "0.21.0", features = ["csr"] }
-yew-oauth2 = "0.10.1"
 yew-router = "0.18.0"
 yewdux = "0.10.0"
 yewdux-functional = "0.1.0"
