--- a/devblog/devblog/server/Properties/launchSettings.json
+++ b/devblog/devblog/server/Properties/launchSettings.json
@@ -10,7 +10,7 @@
   "profiles": {
     "devblog": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7249;http://localhost:5054",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
