--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -50,6 +50,6 @@ jobs:
               run: | 
                 ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
                 docker container rm -f andrewtest.org_client; \
-                docker compose -f ${{ secrets.DEVBLOG_STAGING_ROOT_PATH }}/../ up -d;
+                docker compose -f '${{ secrets.DEVBLOG_STAGING_ROOT_PATH }}/../' up -d;
                 
 
