--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -48,9 +48,9 @@ jobs:
 
             - name: Restart Container
               run: | 
-                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
-                docker container rm -f andrewtest.org_client; \
-                cd '${{ secrets.DEVBLOG_STAGING_ROOT_PATH }}/../'; \
-                docker compose up -d;
+                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} && \
+                docker container rm -f andrewtest.org_client && \
+                cd ${{ secrets.DEVBLOG_STAGING_ROOT_PATH }}/../ && \
+                docker compose up -d
                 
 
