--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -9,6 +9,7 @@ jobs:
     deploy-to-staging:
         name: Deploy to Staging
         runs-on: ubuntu-latest
+        environment: staging
         steps:
             - name: Cache Trunk
               uses: actions/cache@v3
@@ -44,13 +45,13 @@ jobs:
               run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ${{ secrets.SSH_PRIVATE_KEY_PATH }}/known_hosts
 
             - name: Copy Files to Server
-              run: scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEVBLOG_STAGING_ROOT_PATH }}/client
+              run: scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ vars.DEVBLOG_ROOT_PATH }}/client
 
             - name: Restart Container
               run: | 
-                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} && \
-                docker container rm -f andrewtest.org_client && \
-                cd ${{ secrets.DEVBLOG_STAGING_ROOT_PATH }}/../ && \
+                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 
+                docker container rm -f andrewtest.org_client
+                cd ${{ vars.DEVBLOG_ROOT_PATH }}/../
                 docker compose up -d
                 
 
