--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -49,10 +49,8 @@ jobs:
 
             - name: Restart Container
               run: | 
-                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 
+                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ vars.DEVBLOG_ROOT_PATH }}/../"
                 docker container rm -f andrewtest.org_client
-                echo "MY VAR IS ${{ vars.DEVBLOG_ROOT_PATH }}"
-                cd ${{ vars.DEVBLOG_ROOT_PATH }}/../
                 docker compose up -d
                 
 
