--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -50,7 +50,7 @@ jobs:
             - name: Restart Container
               run: | 
                 ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ vars.DEVBLOG_ROOT_PATH }}/../"
-                docker container rm -f andrewtest.org_client
+                docker container rm -f andrewtest.org_client || true
                 docker compose up -d
                 
 
