--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -48,9 +48,9 @@ jobs:
             #   run: scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ vars.DEVBLOG_ROOT_PATH }}/client
 
             - name: Restart Container
-              run: | 
-                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "cd ${{ vars.DEVBLOG_ROOT_PATH }}/../"
-                docker container rm -f andrewtest.org_client || true
-                docker compose up -d
-                
-
+              run: |
+                ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "\
+                cd ${{ vars.DEVBLOG_ROOT_PATH }}/../ && \
+                docker container rm -f andrewtest.org_client || true && \
+                docker compose up -d"
+          
