--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -26,13 +26,13 @@ jobs:
                 targets: wasm32-unknown-unknown
                 toolchain: stable
                 
-            # - name: Install Trunk
-            #   run: cargo install trunk
+            - name: Install Trunk
+              run: cargo install trunk
             #   if: steps.cache.outputs.cache-hit != 'true'
             
-            # - name: Build with Trunk
-            #   run: trunk build --release  
-            #   working-directory: client
+            - name: Build with Trunk
+              run: trunk build --release  
+              working-directory: client
 
             - name: Create SSH Key
               run: |
@@ -44,13 +44,13 @@ jobs:
             - name: Add Host Key to known_hosts
               run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ${{ secrets.SSH_PRIVATE_KEY_PATH }}/known_hosts
 
-            # - name: Copy Files to Server
-            #   run: scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ vars.DEVBLOG_ROOT_PATH }}/client
+            - name: Copy Files to Server
+              run: scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ vars.DEVBLOG_ROOT_PATH }}/client
 
             - name: Restart Container
               run: |
                 ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "\
                 cd ${{ vars.DEVBLOG_ROOT_PATH }}/../ && \
-                docker container rm -f andrewtest.org_client || true && \
+                docker container rm -f ${{ vars.DEVBLOG_CONTAINER }} || true && \
                 docker compose up -d"
           
