--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -35,7 +35,7 @@ jobs:
             #   if: steps.cache.outputs.cache-hit != 'true'
             
             - name: Build with Trunk
-              run: trunk build --release  
+              run: cargo clean && trunk build --release  
               working-directory: client
 
             - name: Create SSH Key
