--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -51,12 +51,12 @@ jobs:
             - name: Copy Files to Server
               run: |
                 scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} -r client/dist ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ vars.DEVBLOG_ROOT_PATH }}/client
-                scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} docker-compose.yaml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ vars.DEVBLOG_ROOT_PATH }}
+                scp -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ vars.DEVBLOG_ROOT_PATH }}
 
             - name: Restart Container
               run: |
                 ssh -i ${{ secrets.SSH_PRIVATE_KEY_PATH }}/${{ secrets.SSH_PRIVATE_KEY_NAME }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "\
-                cd ${{ vars.DEVBLOG_ROOT_PATH }}/../ && \
+                cd ${{ vars.DEVBLOG_ROOT_PATH }} && \
                 docker container rm -f ${{ vars.DEVBLOG_CONTAINER }} || true && \
                 docker compose up -d"
           
