--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,22 @@ services:
     build: ./proxy
     container_name: proxy
     depends_on:
-      - devblog_staging_client
+      - devblog_client
     volumes:
       - /home/devmaster/app/proxy/default.conf:/etc/nginx/conf.d/default.conf
-      - /etc/ssl/certs/andrewtest.org:/etc/ssl/certs/andrewtest.org
+      - /etc/ssl/certs/${DEVBLOG_CERT_NAME}:/etc/ssl/certs/${DEVBLOG_CERT_NAME}
     restart: on-failure
     ports:
       - 443:443
 
-  devblog_staging_client:
-   image: andrewtest.org_client
+  devblog_client:
+   image: ${DEVBLOG_CONTAINER_NAME}
    build: ./client
-   container_name: andrewtest.org_client
+   container_name: ${DEVBLOG_CONTAINER_NAME}
    restart: on-failure
    volumes:
      - ./client/dist:/app
      - ./client/nginx.conf:/etc/nginx/nginx.conf
-     - /etc/ssl/certs/andrewtest.org:/etc/ssl/certs/andrewtest.org
+     - /etc/ssl/certs/${DEVBLOG_CERT_NAME}:/etc/ssl/certs/${DEVBLOG_CERT_NAME}
    ports:
      - 8082:443
